--- a/RazorPages.GeoTagsExtractor/appsettings.json
+++ b/RazorPages.GeoTagsExtractor/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-NHQQJ4V;Database=FileModel_20241001_2000;Integrated Security=SSPI;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
